  @startuml

    entity Admin {
      * admin_id : char(21) <<PK>>
      --
      * email : varchar(255) <<unique>>
      * full_name: varchar(255) 
      * password : varchar(255)
      --
      * created_at : timestamp
      updated_at : timestamp
    }

    entity Satpas {
      * satpas_id : char(21) <<PK>>
      --
      * name: varchar(255) 
      * latitude      : decimal(10,7)
      * longitude     : decimal(10,7)
      --
      * created_at : timestamp
      updated_at : timestamp
    }

      entity User {
      * user_id : char(21) <<PK>>
      --
      nik : char(16)
      email : varchar(255)
      full_name: varchar(255)
      * phone_number : VARCHAR(20)
      pin : varchar(255)
      --
      * created_at : timestamp
      updated_at : timestamp
    }

    entity Session {
      * session_id : int <<PK>> <<autoincrement>>
      --
      * refresh_token : text
      * expires_at : datetime
      user_agent : varchar(255)
      ip_address : varchar(25)
      --
      * admin_id : char(21) <<FK>>
      --
      * created_at : timestamp
      updated_at : timestamp
      revoked_at : timestamp
    }

entity SIM {
  * sim_id : char(21) <<PK>>
  --
  * nomor_sim : char(16) <<unique>>
  * pendaftaran_id : char(21) <<FK>>
  * tanggal_terbit : date
  * tanggal_expired : date
  * picture_path : varchar(255)
  * created_by : char(21) <<FK>> -- admin yang menerbitkan
  --
  * created_at : timestamp
  updated_at : timestamp
}


    entity Pendaftaran_SIM {
  * pendaftaran_id : char(21) <<PK>>
  --
  * kode_pendaftaran : varchar(50) <<unique>>  // kode unik untuk tracking
  * user_id : char(21) <<FK>>
  * satpas_id : char(21) <<FK>>
  * jenis_sim : enum("a","a_umum","bi","bi_umum","bii","bii_umum","c","ci","cii","d","di")
  * tanggal_ujian : date
  * status : enum(
    "diajukan",
    "diperiksa",
    "disetujui",
    "proses_ujian",
    "ujian_gagal",
    "selesai",
    "ditolak"
  )
  --
  * created_at : timestamp
  updated_at : timestamp
}

' sebagai snapshot
entity Data_Pemohon {
  * pemohon_id : char(21) <<PK>>
  --
  * pendaftaran_id : char(21) <<FK>>
  * full_name : varchar(255)
  * nik : char(16)
  * tempat_lahir : varchar(100)
  * tanggal_lahir : date
  * jenis_kelamin : varchar(20)
  * gol_darah : varchar(10)
  * pekerjaan : varchar(255)
  * alamat_rt : varchar(3)
  * alamat_rw : varchar(3)
  * kecamatan : varchar(255)
  * kabupaten : varchar(255)
  * provinsi : varchar(255)
  --
  * created_at : timestamp
  updated_at : timestamp
}



User ||--o{ Pendaftaran_SIM : "mengajukan"
Pendaftaran_SIM ||--|| Data_Pemohon : "memiliki data"
Pendaftaran_SIM ||--|| SIM : "menerbitkan"
Satpas ||--o{ Pendaftaran_SIM : "lokasi"
Admin ||--o{ SIM : "menerbitkan"

  @enduml